--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,14 +18,25 @@ header{
     margin-bottom: 100px;
 }
 main{
-    visibility: hidden;
-    background: rgb(185, 185, 185);
+    background: black;
 }
 .primary-heading{
-
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 3rem;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
 }
 .primary-txt{
-
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 0.95rem;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: center;
 }
 
 /* Navbar styles */
@@ -204,10 +215,57 @@ main{
     letter-spacing: 0.5px;
     text-align: left;
 }
+
+/* Habits styles */
+.habits{
+    max-width: 1040px;
+    margin: 0px auto;
+}
+.habits-info > h3, p{
+    text-align: center;
+}
+.habits-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40px;
+    margin-top: 58px;
+}
+.img-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.img-container > img{
+    border-radius: 50%;
+}
+.img-heading{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 1.125rem;
+    font-weight: 600;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 6px;
+}
+.img-txt{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 0.925rem;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.3px;
+    text-align: center;
+}
 /* For small devices */
 @media screen and (max-width: 576px) {
     .banner{
         flex-direction: column;
+    }
+    .banner-img img{
+        height: auto;
+        /* width: auto; */
     }
     .upper-desc{
         width: 145.91px;
@@ -230,7 +288,12 @@ main{
     }
     .navbar ul{
         display: none;
-
+    }
+    .habits{
+        margin-top: 479px;
+    }
+    .habits-container{
+        grid-template-columns: 1fr;
     }
     
 }                                                
