--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,11 +14,12 @@
 
 /* Shared styles */
 header{
-    background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
-    margin-bottom: 100px;
+    background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 500%);
 }
 main{
+    padding-top: 100px;
     background: black;
+    height: 100%;
 }
 .primary-heading{
     color: rgb(255, 255, 255);
@@ -37,6 +38,19 @@ main{
     line-height: 24px;
     letter-spacing: 0.3px;
     text-align: center;
+}
+.primary-btn{
+    border-radius: 42px;
+
+    background: rgb(230, 83, 60);
+    padding: 16px 40px 16px 40px;
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 1.125rem;
+    font-weight: 600;
+    line-height: 22px;
+    letter-spacing: 0px;
+    text-align: left;
 }
 
 /* Navbar styles */
@@ -135,7 +149,7 @@ main{
     border: 1px solid rgb(255, 255, 255);
     border-radius: 42px;
     margin: 0px 14px;
-    color: rgb(255, 255, 255);
+    color: white;
     font-family: Inter;
     font-size: 1.125rem;
     font-weight: 600;
@@ -143,6 +157,7 @@ main{
     letter-spacing: 0px;
     text-align: left;    
     padding: 16px 40px 16px 40px;
+    background-color: transparent;
 }
 
 .banner-img img{
@@ -220,6 +235,7 @@ main{
 .habits{
     max-width: 1040px;
     margin: 0px auto;
+    padding-bottom: 100px;
 }
 .habits-info > h3, p{
     text-align: center;
@@ -258,9 +274,38 @@ main{
     letter-spacing: 0.3px;
     text-align: center;
 }
+/* Run styles */
+.run-container{
+    max-width: 1060px;
+    margin: 0px auto;
+    border-radius: 18px;
+    background: rgb(34, 34, 34);
+    display: flex;
+    justify-content: space-between;
+    gap: 150px;
+    padding: 30px;
+}
+.run-info .primary-txt{
+    text-align: left;
+    margin-top: 16px;
+    margin-bottom: 32px;
+}
+.run-info{
+    width: 70%;
+}
+.run-img{
+    width: 50%;
+}
+.run-img img{
+    border-radius: 18px;
+    width: 100%;
+    height: 100%;
+}
+
+
 /* For small devices */
 @media screen and (max-width: 576px) {
-    .banner{
+    .banner, .run-container{
         flex-direction: column;
     }
     .banner-img img{
@@ -294,6 +339,15 @@ main{
     }
     .habits-container{
         grid-template-columns: 1fr;
+    }
+    .run-img{
+        width: 100%;
+    }
+    .run-info{
+        margin: 0px auto;
+    }
+    .run-container{
+        gap: 30px;
     }
     
 }                                                
