--- a/styles/styles.css
+++ b/styles/styles.css
@@ -302,10 +302,111 @@ main{
     height: 100%;
 }
 
+/* Bmi styles */
+.bmi-info{
+    max-width: 670px;
+    margin: 0px auto;
+    padding-top: 75px;
+    padding-bottom: 88px;
+}
+.bmi-info p{
+    text-align: left;
+}
+.calculator-container{
+    background: rgb(34, 34, 34);
+    display: flex;
+    justify-content: space-around;
+    padding-top: 49px;
+    padding-bottom: 52px;
+}
+.bmi-chart h4{
+    margin-bottom: 50px;
+}
+table, th, td{
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-collapse: collapse;
+}
+th{
+    padding: 15px 111px 14px 18px;
+}
+td{
+    padding: 13px 70px 13px 18px;
+}
+.bmi-calculator p{
+    text-align: left;
+    margin-top: 14px;
+    margin-bottom: 34px;
+}
+.bmi-heading{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 1.75rem;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+}
+th{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+}
+td{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+}
+input[type=text]{
+    border-radius: 8px;
+
+    background: rgba(255, 255, 255, 0.1);
+    padding: 12px 40px 12px 20px;
+    color: rgba(255, 255, 255, 0.6);
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0px;
+    text-align: left;
+}
+select[name=Sex]{
+    border-radius: 8px;
+    width: 48%;
+    background: rgba(255, 255, 255, 0.1);
+    color: rgba(255, 255, 255, 0.6);
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0px;
+    text-align: left;
+    padding: 12px 20px 12px 20px;
+}
+select[name=Activity]{
+    border-radius: 8px;
+    width: 97%;
+    background: rgba(255, 255, 255, 0.1);
+    color: rgba(255, 255, 255, 0.6);
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0px;
+    text-align: left;
+    padding: 12px 20px 12px 20px;
+}
 
 /* For small devices */
 @media screen and (max-width: 576px) {
-    .banner, .run-container{
+    .banner, .run-container,.calculator-container{
         flex-direction: column;
     }
     .banner-img img{
@@ -346,7 +447,7 @@ main{
     .run-info{
         margin: 0px auto;
     }
-    .run-container{
+    .run-container, .calculator-container{
         gap: 30px;
     }
     
