--- a/styles/styles.css
+++ b/styles/styles.css
@@ -337,6 +337,9 @@ td{
     margin-top: 14px;
     margin-bottom: 34px;
 }
+.bmi-calculator button{
+    margin-bottom: 52px;
+}
 .bmi-heading{
     color: rgb(255, 255, 255);
     font-family: Inter;
@@ -404,6 +407,56 @@ select[name=Activity]{
     padding: 12px 20px 12px 20px;
 }
 
+/* Teams styles */
+.teams-intro{
+    max-width: 670px;
+    margin: 0px auto;
+    margin-top: 90px;
+    margin-bottom: 58px;
+}
+.teams-intro p{
+    text-align: left;
+}
+.teams-container{
+    max-width: 1060px;
+    margin: 0px auto;
+    border-radius: 18px;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 20px;
+}
+.teams-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+.teams-img-container img{
+    border-radius: 18px;
+    width: 100%;
+    height: 100%;
+}
+.teams-img-container{
+    position: relative;
+  text-align: center;
+}
+.staff-info{
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+}
+.trainer-name{
+    color: rgb(250, 250, 249);
+    font-family: Inter;
+    font-size: 1.5rem;
+    font-weight: 900;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: left;
+}
+.staff-info p{
+    text-align: left;
+}
+
+
 /* For small devices */
 @media screen and (max-width: 576px) {
     .banner, .run-container,.calculator-container{
@@ -438,7 +491,7 @@ select[name=Activity]{
     .habits{
         margin-top: 479px;
     }
-    .habits-container{
+    .habits-container, .teams-container{
         grid-template-columns: 1fr;
     }
     .run-img{
