--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,12 @@ main{
     background: black;
     height: 100%;
 }
+footer{
+    background: rgba(255, 255, 255, 0.1);
+    padding-top: 66px;
+    /* padding-left: 190px;
+    padding-right: 190px; */
+}
 .primary-heading{
     color: rgb(255, 255, 255);
     font-family: Inter;
@@ -456,7 +462,66 @@ select[name=Activity]{
     text-align: left;
 }
 
+/* Footer styles */
+.foot{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 100px;
+    max-width: 1060px;
+    margin: 0px auto;
+    margin-bottom: 80px;
+}
 
+.footer-heading{
+    color: rgb(230, 83, 60);
+    font-family: Inter;
+    font-size: 4.375rem;
+    font-weight: 800;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.foot p{
+    text-align: left;
+}
+.get-started-heading{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 39px;
+}
+.footer-txt{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 1.48rem;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 20px;
+}
+hr{
+    max-width: 1060px;
+    margin: 0px auto;
+    border: 2px solid rgba(255, 255, 255, 0.285);
+}
+.ending-txt{
+    padding-top: 35px;
+    padding-bottom: 35px;
+    max-width: 318px;
+    margin: 0px auto;
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 1.25rem;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: left;
+}
 /* For small devices */
 @media screen and (max-width: 576px) {
     .banner, .run-container,.calculator-container{
@@ -491,7 +556,7 @@ select[name=Activity]{
     .habits{
         margin-top: 479px;
     }
-    .habits-container, .teams-container{
+    .habits-container, .teams-container, .foot{
         grid-template-columns: 1fr;
     }
     .run-img{
@@ -502,6 +567,9 @@ select[name=Activity]{
     }
     .run-container, .calculator-container{
         gap: 30px;
+    }
+    .bmi, .get-started1, .get-started2, .about, .ending-txt, .teams-intro{
+        margin: 0px auto;
     }
     
 }                                                
