--- a/styles/styles.css
+++ b/styles/styles.css
@@ -429,6 +429,7 @@ select[name=Activity]{
     border-radius: 18px;
     background: rgba(255, 255, 255, 0.1);
     padding: 20px;
+    margin-bottom: 80px;
 }
 .teams-container{
     display: grid;
@@ -522,9 +523,58 @@ hr{
     letter-spacing: 0.3px;
     text-align: left;
 }
+/* Unique styles */
+.why{
+    padding-top: 100px;
+    max-width: 671px;
+    margin: 0px auto;
+    text-align: center;
+}
+.why p{
+    text-align: left;
+    margin-bottom: 30px;
+}
+.reason-heading{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 1.75rem;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.reason-txt{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 0.975rem;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: left;
+}
+.reasons{
+    margin-bottom: 50px;
+    box-shadow: 10px 10px 5px rgba(15, 1, 1, 0.5);
+    border-radius: 10px;
+    padding: 10px 20px;
+    background-color: rgba(15, 1, 1, 0.844);;
+}
+.unique-container{
+    max-width: 1060px;
+    margin: 0px auto;
+    background: rgba(255, 255, 255, 0.197);
+    display: flex;
+    justify-content: space-between;
+    padding: 30px;
+    border-radius: 10px;
+}
+.unique-img-container img{
+    border-radius: 18px;
+    width: 100%;
+}
 /* For small devices */
 @media screen and (max-width: 576px) {
-    .banner, .run-container,.calculator-container{
+    .banner, .run-container,.calculator-container, .unique-container{
         flex-direction: column;
     }
     .banner-img img{
